# 1024-bridge

./: .deployed-addresses  .gitignore  .program-id  .usdc-mint  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMIT_AND_PUSH.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  STATUS.md  create-usdc.js  design-doc.md  hardhat.config.js  initialize-bridge.sh  manual-mint.js  package.json
.github/workflows/: test.yml
contracts/: 1024Bridge.sol  MockUSDC.sol
docs/: ARCHITECTURE.md  LIQUIDITY-MINING.md
programs/: Anchor.toml  SETUP.md  setup-testnet.sh
programs/bridge/: Cargo.toml
programs/bridge/src/: lib.rs
scripts/: deploy.js
test/: 1024Bridge.test.js
